kubernetes/nextcloud-fpm/components/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nextcloud
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    haproxy.router.openshift.io/timeout: 600s
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;preload"
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  host: nextcloud.apps.okd.claffey.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
